[package]
name = "neurally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
ndarray = "0.15.4"
ndarray-rand = "*"
ndarray-stats = "*"
polars = { version = "0.22.4", features = ["lazy", "polars-io", "ndarray", "dtype-u8", "random"] }
